<resources>
    <string name="app_name">Pastry Central</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_product">New</string>
    <string name="stocks">Stocks</string>
    <string name="orders">Orders</string>
    <string name="products">Products</string>
    <string name="home">Home</string>
    <string name="delete_all">Delete All</string>
    <string name="there_are_no_items">There are no items.</string>
    <string name="no_products_image_description">No products image</string>
    <string name="preview_image">Preview Image</string>
    <string name="open_waze">Open Waze</string>
    <string name="clients">Clients</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="image_url">Image URL</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="firm_name">Firm Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="contact_person">Contact Person</string>
    <string name="address">Waze URL of location</string>
    <string name="manual_address">Street, number</string>
    <string name="coordinates">Coordinates</string>
    <string name="firm_name_mandatory">Firm name *</string>
    <string name="search_hint">Search</string>
    <string name="delete_all_button">Delete All</string>
    <string name="list_contact_person">Contact:</string>
    <string name="location">Location:</string>
    <string name="upload_excel_file">Upload Excel File</string>
    <string name="action_settings">Settings</string>
    <string name="product_image">Product Image</string>
    <string name="back_button">Back</string>
    <string name="lei">lei</string>
    <string name="edit_button">Edit Product</string>
    <string name="provider">Provider</string>
    <string name="quantity">Quantity</string>
    <string name="max_quantity">Max Quantity</string>
    <string name="recipe">Recipe</string>
    <string name="leiprog">lei /</string>
    <string name="max_prog">max:</string>
    <string name="lei_unit">lei / unit</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="no_recipe_yet">No recipe yet</string>
    <string name="delete_recipe">delete recipe</string>
    <string name="open_menu">Open Menu</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient">Ingredient</string>
    <string name="m_u">M.U</string>
    <string name="packaging">Packaging</string>
    <string name="refresh">refresh</string>
    <string name="add_provider">Add Provider</string>
    <string name="providers">Providers</string>
    <string name="create_order">Create Order</string>
    <string name="channel_name">pastry central notifs</string>
    <string name="channel_description">notifications from sensors or others</string>

    <string-array name="client_types_array">
        <item>SPECIAL</item>
        <item>REGULAR</item>
        <item>KINDERGARTEN</item>
    </string-array>
</resources>