<!-- res/menu/bottom_nav_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_48"
        android:title="@string/home"
        />
    <item
        android:id="@+id/nav_products"
        android:icon="@drawable/pastry_48"
        android:title="@string/products"
        />
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/list_48"
        android:title="@string/orders"
        />
    <item
        android:id="@+id/nav_clients"
        android:icon="@drawable/user_48"
        android:title="@string/clients"
        />
    <item
        android:id="@+id/nav_stocks"
        android:icon="@drawable/recipes_50"
        android:title="@string/stocks"
        />
</menu>