<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stock"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:background="@color/product_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/search_hint"
            android:inputType="text"
            android:padding="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/search_bar_background"
            android:drawableStart="@drawable/search_small"
            android:drawableEnd="@drawable/close_16"
            android:drawablePadding="8dp"
            tools:ignore="RtlSymmetry"/>

        <Button
            android:id="@+id/addStockButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="3dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/new_50"
            android:contentDescription="@string/add_product" />

        <ImageButton
            android:id="@+id/menuButton"
            android:layout_marginTop="7dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/menu_50"
            android:contentDescription="@string/open_menu"
            android:text="" />


    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stocksRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:clipToPadding="false"
                tools:listitem="@layout/stock_item" />

            <ViewStub
                android:id="@+id/emptyView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout="@layout/empty_view"
                android:visibility="gone" />

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_marginTop="60dp"
        android:layout_height="match_parent">

        <include layout="@layout/placeholder_item_stock"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>