<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/back_65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back_button" />

        <TextView
            android:id="@+id/dayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Monday - 12.06.23"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/backButton"
            app:layout_constraintEnd_toStartOf="@id/menuButton"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toTopOf="@id/backButton" />


        <ImageButton
            android:id="@+id/menuButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/menu_50"
            android:contentDescription="@string/open_menu"
            app:layout_constraintBottom_toBottomOf="@id/dayTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/dayTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints=""
            android:hint="@string/search_hint"
            android:inputType="text"
            android:padding="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/search_bar_background"
            android:drawableStart="@drawable/search_small"
            android:drawableEnd="@drawable/close_16"
            android:drawablePadding="8dp"
            tools:ignore="RtlSymmetry"/>

        <TextView
            android:id="@+id/showCompletedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Completed"
            android:textSize="11sp"
            android:padding="8dp"
            android:background="@drawable/rounded_corners_button"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBar" />


        <ImageButton
            android:id="@+id/addOrderButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:background="@color/product_header"
            android:contentDescription="@string/create_order"
            android:src="@drawable/add_48"
            android:tooltipText="@string/create_order"
            app:layout_constraintEnd_toStartOf="@+id/addDayOrderButton"
            app:layout_constraintTop_toBottomOf="@id/searchBar" />


        <ImageButton
            android:id="@+id/addDayOrderButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/create_order"
            android:tooltipText="@string/create_order"
            android:background="@color/product_header"
            app:layout_constraintTop_toBottomOf="@id/searchBar"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/add_48" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/searchLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ordersRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:clipToPadding="false"
                tools:listitem="@layout/order_item" />

            <ViewStub
                android:id="@+id/emptyView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout="@layout/empty_view"
                android:visibility="gone" />

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/searchLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/placeholder_item_product" />

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>